Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7680,7 +7680,9 @@
       "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 34.80113636363637\tLoss: 14.587\n",
       "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 46.875\tLoss: 8.344\n",
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 55.96590909090909\tLoss: 5.135\n",
-      "Coord: [-0.2  0.5]\tAcc: 85\tLoss: 3.558\r"
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 63.28125\tLoss: 3.643\n",
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 60.44034090909091\tLoss: 3.925\n",
+      "Coord: [0.3 0.5]\tAcc: 61\tLoss: 7.485\r"
      ]
     }
    ],
