--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7650,7 +7650,11 @@
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 9.517045454545455\tLoss: 164.586\n",
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.9375\tLoss: 92.547\n",
       "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 14.630681818181818\tLoss: 46.065\n",
-      "Coord: [-0.7  1. ]\tAcc: 17\tLoss: 36.238\r"
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 17.897727272727273\tLoss: 27.956\n",
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 21.803977272727273\tLoss: 19.754\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 22.37215909090909\tLoss: 20.767\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 17.96875\tLoss: 29.442\n",
+      "Coord: [0.2 1. ]\tAcc: 24\tLoss: 41.318\r"
      ]
     }
    ],
