Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7682,7 +7682,9 @@
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 55.96590909090909\tLoss: 5.135\n",
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 63.28125\tLoss: 3.643\n",
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 60.44034090909091\tLoss: 3.925\n",
-      "Coord: [0.3 0.5]\tAcc: 61\tLoss: 7.485\r"
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 44.31818181818182\tLoss: 7.491\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 25.213068181818183\tLoss: 17.087\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 12.642045454545455\tLoss: 34.877\n"
      ]
     }
    ],
