--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7684,7 +7684,10 @@
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 60.44034090909091\tLoss: 3.925\n",
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 44.31818181818182\tLoss: 7.491\n",
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 25.213068181818183\tLoss: 17.087\n",
-      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 12.642045454545455\tLoss: 34.877\n"
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 12.642045454545455\tLoss: 34.877\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 9.801136363636363\tLoss: 58.444\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 15.411931818181818\tLoss: 40.812\n",
+      "Coord: [-0.9  0.6]\tAcc: 25\tLoss: 26.644\r"
      ]
     }
    ],
