Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7687,7 +7687,9 @@
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 12.642045454545455\tLoss: 34.877\n",
       "count: 334\tCoord: [0.9 0.5]\t\tAcc: 9.801136363636363\tLoss: 58.444\n",
       "count: 336\tCoord: [-1.   0.6]\t\tAcc: 15.411931818181818\tLoss: 40.812\n",
-      "Coord: [-0.9  0.6]\tAcc: 25\tLoss: 26.644\r"
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 24.076704545454547\tLoss: 22.372\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 37.92613636363637\tLoss: 13.188\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 46.44886363636363\tLoss: 8.896\n"
      ]
     }
    ],
