Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7689,7 +7689,10 @@
       "count: 336\tCoord: [-1.   0.6]\t\tAcc: 15.411931818181818\tLoss: 40.812\n",
       "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 24.076704545454547\tLoss: 22.372\n",
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 37.92613636363637\tLoss: 13.188\n",
-      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 46.44886363636363\tLoss: 8.896\n"
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 46.44886363636363\tLoss: 8.896\n",
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 49.71590909090909\tLoss: 6.867\n",
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 48.79261363636363\tLoss: 6.638\n",
+      "Coord: [0.1 0.6]\tAcc: 64\tLoss: 6.212\r"
      ]
     }
    ],
