Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7692,7 +7692,9 @@
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 46.44886363636363\tLoss: 8.896\n",
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 49.71590909090909\tLoss: 6.867\n",
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 48.79261363636363\tLoss: 6.638\n",
-      "Coord: [0.1 0.6]\tAcc: 64\tLoss: 6.212\r"
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 42.11647727272727\tLoss: 8.935\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 26.06534090909091\tLoss: 17.185\n",
+      "Coord: [0.6 0.6]\tAcc: 22\tLoss: 31.448\r"
      ]
     }
    ],
