Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7694,7 +7694,10 @@
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 48.79261363636363\tLoss: 6.638\n",
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 42.11647727272727\tLoss: 8.935\n",
       "count: 350\tCoord: [0.4 0.6]\t\tAcc: 26.06534090909091\tLoss: 17.185\n",
-      "Coord: [0.6 0.6]\tAcc: 22\tLoss: 31.448\r"
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 13.352272727272727\tLoss: 33.256\n",
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 10.298295454545455\tLoss: 55.074\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 9.730113636363637\tLoss: 81.159\n",
+      "Coord: [-1.   0.7]\tAcc: 32\tLoss: 40.868\r"
      ]
     }
    ],
