--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7697,7 +7697,9 @@
       "count: 352\tCoord: [0.6 0.6]\t\tAcc: 13.352272727272727\tLoss: 33.256\n",
       "count: 354\tCoord: [0.8 0.6]\t\tAcc: 10.298295454545455\tLoss: 55.074\n",
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 9.730113636363637\tLoss: 81.159\n",
-      "Coord: [-1.   0.7]\tAcc: 32\tLoss: 40.868\r"
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 16.477272727272727\tLoss: 34.604\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 26.5625\tLoss: 20.549\n",
+      "Coord: [-0.5  0.7]\tAcc: 48\tLoss: 13.474\r"
      ]
     }
    ],
