Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7699,7 +7699,9 @@
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 9.730113636363637\tLoss: 81.159\n",
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 16.477272727272727\tLoss: 34.604\n",
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 26.5625\tLoss: 20.549\n",
-      "Coord: [-0.5  0.7]\tAcc: 48\tLoss: 13.474\r"
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 36.86079545454545\tLoss: 13.829\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 42.1875\tLoss: 11.032\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 40.90909090909091\tLoss: 10.498\n"
      ]
     }
    ],
