Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7701,7 +7701,10 @@
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 26.5625\tLoss: 20.549\n",
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 36.86079545454545\tLoss: 13.829\n",
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 42.1875\tLoss: 11.032\n",
-      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 40.90909090909091\tLoss: 10.498\n"
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 40.90909090909091\tLoss: 10.498\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 35.72443181818182\tLoss: 12.271\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 26.27840909090909\tLoss: 18.519\n",
+      "Coord: [0.4 0.7]\tAcc: 31\tLoss: 22.922\r"
      ]
     }
    ],
