--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7704,7 +7704,9 @@
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 40.90909090909091\tLoss: 10.498\n",
       "count: 368\tCoord: [0.1 0.7]\t\tAcc: 35.72443181818182\tLoss: 12.271\n",
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 26.27840909090909\tLoss: 18.519\n",
-      "Coord: [0.4 0.7]\tAcc: 31\tLoss: 22.922\r"
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 14.275568181818182\tLoss: 33.031\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 10.15625\tLoss: 53.943\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 9.872159090909092\tLoss: 77.992\n"
      ]
     }
    ],
