--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7706,7 +7706,10 @@
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 26.27840909090909\tLoss: 18.519\n",
       "count: 372\tCoord: [0.5 0.7]\t\tAcc: 14.275568181818182\tLoss: 33.031\n",
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 10.15625\tLoss: 53.943\n",
-      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 9.872159090909092\tLoss: 77.992\n"
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 9.872159090909092\tLoss: 77.992\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 12.997159090909092\tLoss: 48.886\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 18.039772727272727\tLoss: 31.214\n",
+      "Coord: [-0.7  0.8]\tAcc: 36\tLoss: 23.051\r"
      ]
     }
    ],
