Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7709,7 +7709,9 @@
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 9.872159090909092\tLoss: 77.992\n",
       "count: 378\tCoord: [-1.   0.8]\t\tAcc: 12.997159090909092\tLoss: 48.886\n",
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 18.039772727272727\tLoss: 31.214\n",
-      "Coord: [-0.7  0.8]\tAcc: 36\tLoss: 23.051\r"
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 25.355113636363637\tLoss: 20.957\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 32.59943181818182\tLoss: 16.483\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 33.16761363636363\tLoss: 15.338\n"
      ]
     }
    ],
