--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7711,7 +7711,10 @@
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 18.039772727272727\tLoss: 31.214\n",
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 25.355113636363637\tLoss: 20.957\n",
       "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 32.59943181818182\tLoss: 16.483\n",
-      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 33.16761363636363\tLoss: 15.338\n"
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 33.16761363636363\tLoss: 15.338\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 29.332386363636363\tLoss: 16.883\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 23.011363636363637\tLoss: 22.047\n",
+      "Coord: [0.3 0.8]\tAcc: 39\tLoss: 24.897\r"
      ]
     }
    ],
