Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7714,7 +7714,9 @@
       "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 33.16761363636363\tLoss: 15.338\n",
       "count: 388\tCoord: [0.  0.8]\t\tAcc: 29.332386363636363\tLoss: 16.883\n",
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 23.011363636363637\tLoss: 22.047\n",
-      "Coord: [0.3 0.8]\tAcc: 39\tLoss: 24.897\r"
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 14.84375\tLoss: 34.196\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 10.582386363636363\tLoss: 54.783\n",
+      "Coord: [0.8 0.8]\tAcc: 11\tLoss: 77.258\r"
      ]
     }
    ],
