Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7716,7 +7716,10 @@
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 23.011363636363637\tLoss: 22.047\n",
       "count: 392\tCoord: [0.4 0.8]\t\tAcc: 14.84375\tLoss: 34.196\n",
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 10.582386363636363\tLoss: 54.783\n",
-      "Coord: [0.8 0.8]\tAcc: 11\tLoss: 77.258\r"
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 9.730113636363637\tLoss: 77.063\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 9.730113636363637\tLoss: 104.063\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 14.559659090909092\tLoss: 44.047\n",
+      "Coord: [-0.8  0.9]\tAcc: 19\tLoss: 40.209\r"
      ]
     }
    ],
