--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7719,7 +7719,9 @@
       "count: 396\tCoord: [0.8 0.8]\t\tAcc: 9.730113636363637\tLoss: 77.063\n",
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 9.730113636363637\tLoss: 104.063\n",
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 14.559659090909092\tLoss: 44.047\n",
-      "Coord: [-0.8  0.9]\tAcc: 19\tLoss: 40.209\r"
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 17.755681818181817\tLoss: 31.34\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 22.727272727272727\tLoss: 23.871\n",
+      "Coord: [-0.3  0.9]\tAcc: 29\tLoss: 22.728\r"
      ]
     }
    ],
