--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7721,7 +7721,9 @@
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 14.559659090909092\tLoss: 44.047\n",
       "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 17.755681818181817\tLoss: 31.34\n",
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 22.727272727272727\tLoss: 23.871\n",
-      "Coord: [-0.3  0.9]\tAcc: 29\tLoss: 22.728\r"
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 26.775568181818183\tLoss: 21.581\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 25.213068181818183\tLoss: 22.364\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 19.53125\tLoss: 27.318\n"
      ]
     }
    ],
