Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7723,7 +7723,10 @@
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 22.727272727272727\tLoss: 23.871\n",
       "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 26.775568181818183\tLoss: 21.581\n",
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 25.213068181818183\tLoss: 22.364\n",
-      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 19.53125\tLoss: 27.318\n"
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 19.53125\tLoss: 27.318\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 15.340909090909092\tLoss: 37.555\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 10.653409090909092\tLoss: 56.013\n",
+      "Coord: [0.6 0.9]\tAcc: 12\tLoss: 63.992\r"
      ]
     }
    ],
