Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7726,7 +7726,9 @@
       "count: 410\tCoord: [0.1 0.9]\t\tAcc: 19.53125\tLoss: 27.318\n",
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 15.340909090909092\tLoss: 37.555\n",
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 10.653409090909092\tLoss: 56.013\n",
-      "Coord: [0.6 0.9]\tAcc: 12\tLoss: 63.992\r"
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 9.730113636363637\tLoss: 78.489\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 9.730113636363637\tLoss: 101.924\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 11.221590909090908\tLoss: 56.707\n"
      ]
     }
    ],
