Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7728,7 +7728,10 @@
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 10.653409090909092\tLoss: 56.013\n",
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 9.730113636363637\tLoss: 78.489\n",
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 9.730113636363637\tLoss: 101.924\n",
-      "count: 420\tCoord: [-1.  1.]\t\tAcc: 11.221590909090908\tLoss: 56.707\n"
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 11.221590909090908\tLoss: 56.707\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 13.849431818181818\tLoss: 42.861\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 16.832386363636363\tLoss: 33.781\n",
+      "Coord: [-0.5  1. ]\tAcc: 34\tLoss: 28.308\r"
      ]
     }
    ],
