Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7731,7 +7731,9 @@
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 11.221590909090908\tLoss: 56.707\n",
       "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 13.849431818181818\tLoss: 42.861\n",
       "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 16.832386363636363\tLoss: 33.781\n",
-      "Coord: [-0.5  1. ]\tAcc: 34\tLoss: 28.308\r"
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 19.81534090909091\tLoss: 29.262\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 21.946022727272727\tLoss: 28.753\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 18.323863636363637\tLoss: 33.448\n"
      ]
     }
    ],
