Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7733,7 +7733,10 @@
       "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 16.832386363636363\tLoss: 33.781\n",
       "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 19.81534090909091\tLoss: 29.262\n",
       "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 21.946022727272727\tLoss: 28.753\n",
-      "count: 430\tCoord: [0. 1.]\t\tAcc: 18.323863636363637\tLoss: 33.448\n"
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 18.323863636363637\tLoss: 33.448\n",
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 14.701704545454545\tLoss: 42.51\n",
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 11.221590909090908\tLoss: 58.345\n",
+      "Coord: [0.5 1. ]\tAcc: 11\tLoss: 64.857\r"
      ]
     }
    ],
