--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7501,10 +7501,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-04T21:18:20.778Z"
+     "end_time": "2019-05-04T22:23:12.721628Z",
+     "start_time": "2019-05-04T21:18:20.781025Z"
     }
    },
    "outputs": [
@@ -7736,7 +7737,9 @@
       "count: 430\tCoord: [0. 1.]\t\tAcc: 18.323863636363637\tLoss: 33.448\n",
       "count: 432\tCoord: [0.2 1. ]\t\tAcc: 14.701704545454545\tLoss: 42.51\n",
       "count: 434\tCoord: [0.4 1. ]\t\tAcc: 11.221590909090908\tLoss: 58.345\n",
-      "Coord: [0.5 1. ]\tAcc: 11\tLoss: 64.857\r"
+      "count: 436\tCoord: [0.6 1. ]\t\tAcc: 9.588068181818182\tLoss: 79.35\n",
+      "count: 438\tCoord: [0.8 1. ]\t\tAcc: 9.872159090909092\tLoss: 102.227\n",
+      "count: 440\tCoord: [1. 1.]\t\tAcc: 10.014204545454545\tLoss: 125.85\n"
      ]
     }
    ],
