Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7451,33 +7451,30 @@
    },
    "outputs": [],
    "source": [
-    "np.save('a_loss_list_1.npy', np.asarray(loss_list))\n",
-    "np.save('a_acc_list_1.npy', np.asarray(acc_list))\n",
+    "np.save('c_loss_list_1.npy', np.asarray(loss_list))\n",
+    "np.save('c_acc_list_1.npy', np.asarray(acc_list))\n",
     "random_direction1 = get_random_weights(copy_of_the_weights)\n",
     "random_direction2 = get_random_weights(copy_of_the_weights)\n",
     "\n",
     "for d1,d2,w in zip(random_direction1,random_direction2,copy_of_the_weights):\n",
     "    \n",
-    "#     d1,_ = tf.qr(d1.cpu().numpy())\n",
-    "#     d1   = d1.eval()\n",
-    "#     d2,_ = tf.qr(np.transpose(d2.cpu().numpy(),(2,3,0,1)))\n",
-    "#     d2   = np.transpose(d2.eval(),(2,3,0,1))\n",
-    "#     d1   = torch.from_numpy(d1).cuda()\n",
-    "#     d2   = torch.from_numpy(d2).cuda()\n",
+    "    if w.dim() == 1:\n",
+    "        d1.data = torch.zeros_like(w)\n",
+    "        d2.data = torch.zeros_like(w)\n",
+    "    else:\n",
+    "        w_norm  = w.view((w.shape[0],-1))  .norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm1 = d1.view((d1.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm2 = d2.view((d2.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "\n",
-    "    w_norm  = w.view((w.shape[0],-1))  .norm(dim=(1),keepdim=True)[:,:,None,None]\n",
-    "    d_norm1 = d1.view((d1.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
-    "    d_norm2 = d2.view((d2.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
-    "    \n",
-    "    d1.data = d1.cuda() * (w_norm/(d_norm1.cuda()+1e-10))\n",
-    "    d2.data = d2.cuda() * (w_norm/(d_norm2.cuda()+1e-10))\n",
-    "    \n",
-    "    d1,_ = tf.qr(d1.cpu().numpy())\n",
-    "    d1   = d1.eval()\n",
-    "    d2,_ = tf.qr(np.transpose(d2.cpu().numpy(),(2,3,0,1)))\n",
-    "    d2   = np.transpose(d2.eval(),(2,3,0,1))\n",
-    "    d1   = torch.from_numpy(d1).cuda()\n",
-    "    d2   = torch.from_numpy(d2).cuda()"
+    "        d1.data = d1.cuda() * (w_norm/(d_norm1.cuda()+1e-10))\n",
+    "        d2.data = d2.cuda() * (w_norm/(d_norm2.cuda()+1e-10))\n",
+    "\n",
+    "        d1,_ = tf.qr(d1.cpu().numpy())\n",
+    "        d1   = d1.eval()\n",
+    "        d2,_ = tf.qr(np.transpose(d2.cpu().numpy(),(2,3,0,1)))\n",
+    "        d2   = np.transpose(d2.eval(),(2,3,0,1))\n",
+    "        d1   = torch.from_numpy(d1).cuda()\n",
+    "        d2   = torch.from_numpy(d2).cuda()"
    ]
   },
   {
