Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7466,8 +7466,8 @@
     "        d1   = d1.eval()\n",
     "        d2,_ = tf.qr(np.transpose(d2.cpu().numpy(),(2,3,0,1)))\n",
     "        d2   = np.transpose(d2.eval(),(2,3,0,1))\n",
-    "        d1   = torch.from_numpy(d1).cuda()\n",
-    "        d2   = torch.from_numpy(d2).cuda()     \n",
+    "        d1.data   = torch.from_numpy(d1).cuda()\n",
+    "        d2.data   = torch.from_numpy(d2).cuda()     \n",
     "        \n",
     "        w_norm  = w.view((w.shape[0],-1))  .norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "        d_norm1 = d1.view((d1.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
