--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7442,34 +7442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T02:19:47.533611Z",
-     "start_time": "2019-05-05T02:19:47.206444Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(96, 3, 3, 3)\n",
-      "(3, 3, 3, 3)\n"
-     ]
+     "start_time": "2019-05-05T02:21:05.269Z"
     },
-    {
-     "ename": "RuntimeError",
-     "evalue": "The size of tensor a (96) must match the size of tensor b (3) at non-singleton dimension 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-219-adb86f89f1ba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[0md1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0md1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mw_norm\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md_norm1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1e-10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m         \u001b[0md2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0md2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mw_norm\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md_norm2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1e-10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m: The size of tensor a (96) must match the size of tensor b (3) at non-singleton dimension 0"
-     ]
-    }
-   ],
+    "code_folding": [
+     26
+    ]
+   },
+   "outputs": [],
    "source": [
     "# np.save('a_loss_list_1.npy', np.asarray(loss_list))\n",
     "# np.save('a_acc_list_1.npy', np.asarray(acc_list))\n",
@@ -7481,14 +7463,28 @@
     "    if w.dim() == 1:\n",
     "        d1.data = torch.zeros_like(w)\n",
     "        d2.data = torch.zeros_like(w)\n",
-    "    else:\n",
+    "        \n",
+    "    elif w.shape[0] == 10:\n",
     "        d11,_ = tf.qr(d1.cpu().numpy())\n",
     "        d11   = d11.eval()\n",
     "        d22,_ = tf.qr(np.transpose(d2.cpu().numpy(),(2,3,1,0)))\n",
     "        d22   = np.transpose(d22.eval(),(3,2,0,1))\n",
+    "\n",
+    "        d1.data   = torch.from_numpy(d11).cuda()\n",
+    "        d2.data   = torch.from_numpy(d22).cuda()     \n",
     "        \n",
-    "        print(d11.shape)\n",
-    "        print(d22.shape)\n",
+    "        w_norm  = w.view((w.shape[0],-1))  .norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm1 = d1.view((d1.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm2 = d2.view((d2.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "\n",
+    "        d1.data = d1.cuda() * (w_norm/(d_norm1.cuda()+1e-10))\n",
+    "        d2.data = d2.cuda() * (w_norm/(d_norm2.cuda()+1e-10))\n",
+    "        \n",
+    "    else:\n",
+    "        d11,_ = tf.qr(d1.cpu().numpy())\n",
+    "        d11   = d11.eval()\n",
+    "        d22,_ = tf.qr(np.transpose(d2.cpu().numpy(),(2,3,0,1)))\n",
+    "        d22   = np.transpose(d22.eval(),(2,3,0,1))\n",
     "\n",
     "        d1.data   = torch.from_numpy(d11).cuda()\n",
     "        d2.data   = torch.from_numpy(d22).cuda()     \n",
