Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7442,16 +7442,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-05T02:21:05.269Z"
+     "end_time": "2019-05-05T02:21:25.831526Z",
+     "start_time": "2019-05-05T02:21:21.991890Z"
     },
-    "code_folding": [
-     26
-    ]
+    "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(96, 3, 3, 3) (96, 3, 3, 3)\n",
+      "(96, 96, 3, 3) (96, 96, 3, 3)\n",
+      "(96, 96, 3, 3) (96, 96, 3, 3)\n",
+      "(192, 96, 3, 3) (192, 96, 3, 3)\n",
+      "(192, 192, 3, 3) (192, 192, 3, 3)\n",
+      "(192, 192, 3, 3) (192, 192, 3, 3)\n",
+      "(192, 192, 3, 3) (192, 192, 3, 3)\n",
+      "(192, 192, 1, 1) (192, 192, 1, 1)\n",
+      "(10, 192, 1, 1) (10, 192, 1, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# np.save('a_loss_list_1.npy', np.asarray(loss_list))\n",
     "# np.save('a_acc_list_1.npy', np.asarray(acc_list))\n",
@@ -7469,7 +7484,7 @@
     "        d11   = d11.eval()\n",
     "        d22,_ = tf.qr(np.transpose(d2.cpu().numpy(),(2,3,1,0)))\n",
     "        d22   = np.transpose(d22.eval(),(3,2,0,1))\n",
-    "\n",
+    "        \n",
     "        d1.data   = torch.from_numpy(d11).cuda()\n",
     "        d2.data   = torch.from_numpy(d22).cuda()     \n",
     "        \n",
