Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7461,7 +7461,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.511363636363637\tLoss: 68.511\n"
+      "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.511363636363637\tLoss: 68.511\n",
+      "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 9.659090909090908\tLoss: 9.98\n",
+      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 12.144886363636363\tLoss: 4.909\n",
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 17.826704545454547\tLoss: 5.189\n"
      ]
     }
    ],
