Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7,7 +7,8 @@
      "end_time": "2019-05-03T18:43:55.458611Z",
      "start_time": "2019-05-03T18:43:42.557277Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "heading_collapsed": true
    },
    "source": [
     "# ==== Import Library ===="
@@ -21,7 +22,8 @@
      "end_time": "2019-05-03T18:56:17.965301Z",
      "start_time": "2019-05-03T18:56:13.350323Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [
     {
@@ -62,7 +64,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== Set up the Network ===="
    ]
@@ -77,7 +81,8 @@
     },
     "code_folding": [
      33
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -248,7 +253,8 @@
      "end_time": "2019-05-03T18:56:44.222212Z",
      "start_time": "2019-05-03T18:56:39.505460Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [
     {
@@ -313,7 +319,8 @@
     },
     "code_folding": [
      3
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [
     {
@@ -373,7 +380,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T18:56:47.357980Z",
      "start_time": "2019-05-03T18:56:45.018588Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -418,7 +426,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== Train the Network & Get Converged Weights ===="
    ]
@@ -435,6 +445,7 @@
      6,
      34
     ],
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -812,7 +823,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-04T02:02:13.273732Z",
      "start_time": "2019-05-04T02:02:12.773738Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -861,7 +873,8 @@
     "code_folding": [
      1,
      13
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -940,7 +953,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-04T02:02:15.431383Z",
      "start_time": "2019-05-04T02:02:15.411877Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -973,7 +987,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-04T02:02:16.654528Z",
      "start_time": "2019-05-04T02:02:16.600464Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -993,7 +1008,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== Play Around with the Weigths ===="
    ]
@@ -1005,7 +1022,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-04T02:02:19.159597Z",
      "start_time": "2019-05-04T02:02:17.834771Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1024,7 +1042,8 @@
     "code_folding": [
      0,
      16
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -7536,7 +7555,17 @@
      "start_time": "2019-05-05T02:23:43.180Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 0\tCoord: [-1. -1.]\t\tAcc: 9.446022727272727\tLoss: 2.374\n",
+      "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 9.943181818181818\tLoss: 2.612\n",
+      "Coord: [-0.7 -1. ]\tAcc: 12\tLoss: 2.812\r"
+     ]
+    }
+   ],
    "source": [
     "# start the evaluation\n",
     "loss_list = np.zeros((numebr_of_points,numebr_of_points)); acc_list  = np.zeros((numebr_of_points,numebr_of_points))\n",
