Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7464,7 +7464,11 @@
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.511363636363637\tLoss: 68.511\n",
       "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 9.659090909090908\tLoss: 9.98\n",
       "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 12.144886363636363\tLoss: 4.909\n",
-      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 17.826704545454547\tLoss: 5.189\n"
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 17.826704545454547\tLoss: 5.189\n",
+      "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 25.071022727272727\tLoss: 8.483\n",
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 21.164772727272727\tLoss: 19.605\n",
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 17.045454545454547\tLoss: 46.404\n",
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 13.352272727272727\tLoss: 101.302\n"
      ]
     }
    ],
