Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7561,7 +7561,14 @@
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.795454545454545\tLoss: 12.297\n",
       "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 12.997159090909092\tLoss: 8.983\n",
       "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 14.84375\tLoss: 7.458\n",
-      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 18.536931818181817\tLoss: 12.045\n"
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 18.536931818181817\tLoss: 12.045\n",
+      "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 19.602272727272727\tLoss: 24.914\n",
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 19.176136363636363\tLoss: 33.029\n",
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 18.323863636363637\tLoss: 41.327\n",
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 13.991477272727273\tLoss: 101.065\n",
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 10.653409090909092\tLoss: 727.231\n",
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 7.7414772727272725\tLoss: 8076.33\n",
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 9.019886363636363\tLoss: 102663.983\n"
      ]
     }
    ],
