--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7562,7 +7562,9 @@
      "text": [
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 9.446022727272727\tLoss: 2.374\n",
       "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 9.943181818181818\tLoss: 2.612\n",
-      "Coord: [-0.7 -1. ]\tAcc: 12\tLoss: 2.812\r"
+      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 11.150568181818182\tLoss: 3.573\n",
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 12.997159090909092\tLoss: 8.337\n",
+      "Coord: [-0.3 -1. ]\tAcc: 17\tLoss: 13.481\r"
      ]
     }
    ],
