Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7564,7 +7564,9 @@
       "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 9.943181818181818\tLoss: 2.612\n",
       "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 11.150568181818182\tLoss: 3.573\n",
       "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 12.997159090909092\tLoss: 8.337\n",
-      "Coord: [-0.3 -1. ]\tAcc: 17\tLoss: 13.481\r"
+      "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 12.713068181818182\tLoss: 20.355\n",
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 17.116477272727273\tLoss: 34.46\n",
+      "Coord: [ 0.1 -1. ]\tAcc: 17\tLoss: 48.293\r"
      ]
     }
    ],
