--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7468,7 +7468,11 @@
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 25.071022727272727\tLoss: 8.483\n",
       "count: 10\tCoord: [ 0. -1.]\t\tAcc: 21.164772727272727\tLoss: 19.605\n",
       "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 17.045454545454547\tLoss: 46.404\n",
-      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 13.352272727272727\tLoss: 101.302\n"
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 13.352272727272727\tLoss: 101.302\n",
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 11.221590909090908\tLoss: 303.257\n",
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 10.298295454545455\tLoss: 1879.846\n",
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 10.298295454545455\tLoss: 20244.768\n",
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 9.872159090909092\tLoss: 20.338\n"
      ]
     }
    ],
