--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7566,7 +7566,9 @@
       "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 12.997159090909092\tLoss: 8.337\n",
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 12.713068181818182\tLoss: 20.355\n",
       "count: 10\tCoord: [ 0. -1.]\t\tAcc: 17.116477272727273\tLoss: 34.46\n",
-      "Coord: [ 0.1 -1. ]\tAcc: 17\tLoss: 48.293\r"
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 14.772727272727273\tLoss: 70.313\n",
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 11.71875\tLoss: 111.339\n",
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 10.369318181818182\tLoss: 121.975\n"
      ]
     }
    ],
