--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7472,7 +7472,11 @@
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 11.221590909090908\tLoss: 303.257\n",
       "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 10.298295454545455\tLoss: 1879.846\n",
       "count: 20\tCoord: [ 1. -1.]\t\tAcc: 10.298295454545455\tLoss: 20244.768\n",
-      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 9.872159090909092\tLoss: 20.338\n"
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 9.872159090909092\tLoss: 20.338\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 10.014204545454545\tLoss: 4.718\n",
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 12.713068181818182\tLoss: 3.993\n",
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 25.639204545454547\tLoss: 4.294\n",
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 30.042613636363637\tLoss: 8.415\n"
      ]
     }
    ],
