--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7568,7 +7568,16 @@
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 13.991477272727273\tLoss: 101.065\n",
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 10.653409090909092\tLoss: 727.231\n",
       "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 7.7414772727272725\tLoss: 8076.33\n",
-      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 9.019886363636363\tLoss: 102663.983\n"
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 9.019886363636363\tLoss: 102663.983\n",
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 11.221590909090908\tLoss: 7.331\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 14.0625\tLoss: 5.146\n",
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 20.3125\tLoss: 5.471\n",
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 23.579545454545453\tLoss: 10.636\n",
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 22.869318181818183\tLoss: 17.753\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 23.295454545454547\tLoss: 23.497\n",
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 21.59090909090909\tLoss: 37.932\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 13.210227272727273\tLoss: 189.362\n",
+      "Coord: [ 0.6 -0.9]\tAcc: 11\tLoss: 524.341\r"
      ]
     }
    ],
