--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7568,7 +7568,9 @@
       "count: 10\tCoord: [ 0. -1.]\t\tAcc: 17.116477272727273\tLoss: 34.46\n",
       "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 14.772727272727273\tLoss: 70.313\n",
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 11.71875\tLoss: 111.339\n",
-      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 10.369318181818182\tLoss: 121.975\n"
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 10.369318181818182\tLoss: 121.975\n",
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 10.795454545454545\tLoss: 109.322\n",
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 10.227272727272727\tLoss: 91.134\n"
      ]
     }
    ],
