--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -64,7 +64,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== Set up the Network ===="
    ]
@@ -80,7 +82,8 @@
     "code_folding": [
      33,
      95
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -251,7 +254,8 @@
      "end_time": "2019-05-03T18:48:10.456509Z",
      "start_time": "2019-05-03T18:48:10.411431Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [
     {
@@ -306,7 +310,8 @@
      "end_time": "2019-05-03T18:48:11.924067Z",
      "start_time": "2019-05-03T18:48:11.903551Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [
     {
@@ -366,7 +371,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T18:49:26.388331Z",
      "start_time": "2019-05-03T18:49:09.744573Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -411,7 +417,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== Train the Network & Get Converged Weights ===="
    ]
@@ -428,6 +436,7 @@
      6,
      34
     ],
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -805,7 +814,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T21:24:52.572781Z",
      "start_time": "2019-05-03T21:24:51.975252Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -854,7 +864,8 @@
     "code_folding": [
      1,
      13
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -933,7 +944,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T21:25:03.632636Z",
      "start_time": "2019-05-03T21:25:03.611248Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -966,7 +978,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T22:33:29.633829Z",
      "start_time": "2019-05-03T22:33:29.603633Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -975,7 +988,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== Play Around with the Weigths ===="
    ]
@@ -987,7 +1002,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T22:44:33.276216Z",
      "start_time": "2019-05-03T22:44:29.336227Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1002,7 +1018,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T23:43:14.973469Z",
      "start_time": "2019-05-03T23:43:14.944172Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1017,7 +1034,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T23:43:39.773866Z",
      "start_time": "2019-05-03T23:43:30.843484Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1032,7 +1050,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T23:43:55.010977Z",
      "start_time": "2019-05-03T23:43:54.825646Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1054,7 +1073,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T23:44:12.572452Z",
      "start_time": "2019-05-03T23:44:12.500764Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1097,7 +1117,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T23:44:38.720399Z",
      "start_time": "2019-05-03T23:44:34.340745Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1119,7 +1140,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== 1. Random - Filter Normalization ===="
    ]
@@ -1132,7 +1155,8 @@
      "end_time": "2019-05-03T23:48:12.236380Z",
      "start_time": "2019-05-03T23:48:11.999659Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1156,7 +1180,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T23:48:38.704950Z",
      "start_time": "2019-05-03T23:48:33.685748Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1184,7 +1209,8 @@
      "end_time": "2019-05-04T00:59:16.186316Z",
      "start_time": "2019-05-03T23:49:00.800525Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [
     {
@@ -1469,6 +1495,7 @@
      "end_time": "2019-05-04T00:59:48.825507Z",
      "start_time": "2019-05-04T00:59:39.321526Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -7448,9 +7475,7 @@
      "end_time": "2019-05-05T02:21:25.831526Z",
      "start_time": "2019-05-05T02:21:21.991890Z"
     },
-    "code_folding": [
-     5
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -7577,7 +7602,9 @@
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 23.295454545454547\tLoss: 23.497\n",
       "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 21.59090909090909\tLoss: 37.932\n",
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 13.210227272727273\tLoss: 189.362\n",
-      "Coord: [ 0.6 -0.9]\tAcc: 11\tLoss: 524.341\r"
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 8.948863636363637\tLoss: 1907.711\n",
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 8.59375\tLoss: 26626.138\n",
+      "Coord: [ 1.  -0.9]\tAcc: 7\tLoss: 107214.6179\r"
      ]
     }
    ],
