Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7,7 +7,8 @@
      "end_time": "2019-05-03T18:43:55.458611Z",
      "start_time": "2019-05-03T18:43:42.557277Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "heading_collapsed": true
    },
    "source": [
     "# ==== Import Library ===="
@@ -21,7 +22,8 @@
      "end_time": "2019-05-03T18:56:31.174791Z",
      "start_time": "2019-05-03T18:56:26.383117Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [
     {
@@ -62,7 +64,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== Set up the Network ===="
    ]
@@ -78,7 +82,8 @@
     "code_folding": [
      33,
      95
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -249,7 +254,8 @@
      "end_time": "2019-05-03T18:56:34.707631Z",
      "start_time": "2019-05-03T18:56:31.239327Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [
     {
@@ -314,7 +320,8 @@
     },
     "code_folding": [
      3
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [
     {
@@ -390,7 +397,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T18:56:37.963484Z",
      "start_time": "2019-05-03T18:56:35.820172Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -435,7 +443,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== Train the Network & Get Converged Weights ===="
    ]
@@ -452,6 +462,7 @@
      6,
      34
     ],
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -829,7 +840,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T22:22:22.667153Z",
      "start_time": "2019-05-03T22:22:22.246769Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -877,7 +889,8 @@
     },
     "code_folding": [
      13
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -959,7 +972,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T22:22:31.236089Z",
      "start_time": "2019-05-03T22:22:31.209176Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -992,7 +1006,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T22:33:55.725296Z",
      "start_time": "2019-05-03T22:33:55.698070Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1001,7 +1016,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== Play Around with the Weigths ===="
    ]
@@ -1013,7 +1030,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T23:51:16.208652Z",
      "start_time": "2019-05-03T23:51:13.375597Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -7476,7 +7494,11 @@
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 10.014204545454545\tLoss: 4.718\n",
       "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 12.713068181818182\tLoss: 3.993\n",
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 25.639204545454547\tLoss: 4.294\n",
-      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 30.042613636363637\tLoss: 8.415\n"
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 30.042613636363637\tLoss: 8.415\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 25.923295454545453\tLoss: 20.927\n",
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 17.826704545454547\tLoss: 52.047\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 11.079545454545455\tLoss: 140.03\n",
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 9.730113636363637\tLoss: 714.235\n"
      ]
     }
    ],
