--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7570,7 +7570,9 @@
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 11.71875\tLoss: 111.339\n",
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 10.369318181818182\tLoss: 121.975\n",
       "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 10.795454545454545\tLoss: 109.322\n",
-      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 10.227272727272727\tLoss: 91.134\n"
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 10.227272727272727\tLoss: 91.134\n",
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 10.440340909090908\tLoss: 2.375\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 10.298295454545455\tLoss: 2.688\n"
      ]
     }
    ],
