Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -1120,7 +1120,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== 1. Random - Filter Normalization - whole norm ===="
    ]
@@ -1133,7 +1135,8 @@
      "end_time": "2019-05-04T02:02:22.346665Z",
      "start_time": "2019-05-04T02:02:22.279457Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1164,7 +1167,8 @@
     },
     "code_folding": [
      3
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [
     {
@@ -1191,7 +1195,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-04T02:59:41.727439Z",
      "start_time": "2019-05-04T02:02:31.242412Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1476,7 +1481,8 @@
      "end_time": "2019-05-04T02:59:46.468834Z",
      "start_time": "2019-05-04T02:59:44.730855Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [
     {
@@ -7444,7 +7450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ==== 3. Random - Orth - whole norm ===="
+    "# ==== 2. Random - Orthogonal - whole norm ===="
    ]
   },
   {
@@ -7572,7 +7578,8 @@
       "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 10.795454545454545\tLoss: 109.322\n",
       "count: 20\tCoord: [ 1. -1.]\t\tAcc: 10.227272727272727\tLoss: 91.134\n",
       "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 10.440340909090908\tLoss: 2.375\n",
-      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 10.298295454545455\tLoss: 2.688\n"
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 10.298295454545455\tLoss: 2.688\n",
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 12.784090909090908\tLoss: 4.187\n"
      ]
     }
    ],
