--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1041,7 +1041,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== 1. Random - Filter Normalization - whole norm ===="
    ]
@@ -1054,7 +1056,8 @@
      "end_time": "2019-05-03T23:53:45.814259Z",
      "start_time": "2019-05-03T23:53:45.631300Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1082,7 +1085,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-03T23:54:37.476171Z",
      "start_time": "2019-05-03T23:54:31.499006Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1110,7 +1114,8 @@
      "end_time": "2019-05-04T01:04:54.854959Z",
      "start_time": "2019-05-03T23:54:47.314292Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [
     {
@@ -1395,6 +1400,7 @@
      "end_time": "2019-05-04T01:05:07.641719Z",
      "start_time": "2019-05-04T01:05:05.680092Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -7363,7 +7369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ==== 3. Random - Orth - whole norm ===="
+    "# ==== 2. Random - Orthogonal - whole norm ===="
    ]
   },
   {
@@ -7498,7 +7504,8 @@
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 25.923295454545453\tLoss: 20.927\n",
       "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 17.826704545454547\tLoss: 52.047\n",
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 11.079545454545455\tLoss: 140.03\n",
-      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 9.730113636363637\tLoss: 714.235\n"
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 9.730113636363637\tLoss: 714.235\n",
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 9.872159090909092\tLoss: 5878.553\n"
      ]
     }
    ],
