--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7579,7 +7579,8 @@
       "count: 20\tCoord: [ 1. -1.]\t\tAcc: 10.227272727272727\tLoss: 91.134\n",
       "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 10.440340909090908\tLoss: 2.375\n",
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 10.298295454545455\tLoss: 2.688\n",
-      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 12.784090909090908\tLoss: 4.187\n"
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 12.784090909090908\tLoss: 4.187\n",
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 14.559659090909092\tLoss: 10.816\n"
      ]
     }
    ],
