--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7607,7 +7607,9 @@
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.369318181818182\tLoss: 7.467\n",
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 14.275568181818182\tLoss: 4.489\n",
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 17.258522727272727\tLoss: 3.759\n",
-      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 23.579545454545453\tLoss: 4.601\n"
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 23.579545454545453\tLoss: 4.601\n",
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 28.90625\tLoss: 8.858\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 29.048295454545453\tLoss: 13.228\n"
      ]
     }
    ],
