--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7581,7 +7581,8 @@
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 10.298295454545455\tLoss: 2.688\n",
       "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 12.784090909090908\tLoss: 4.187\n",
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 14.559659090909092\tLoss: 10.816\n",
-      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 18.892045454545453\tLoss: 20.097\n"
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 18.892045454545453\tLoss: 20.097\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 22.15909090909091\tLoss: 36.66\n"
      ]
     }
    ],
