--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7508,7 +7508,11 @@
       "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 9.872159090909092\tLoss: 5878.553\n",
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 9.872159090909092\tLoss: 34.419\n",
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 9.446022727272727\tLoss: 6.215\n",
-      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 11.292613636363637\tLoss: 3.855\n"
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 11.292613636363637\tLoss: 3.855\n",
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 19.105113636363637\tLoss: 3.221\n",
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 38.56534090909091\tLoss: 3.817\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 38.13920454545455\tLoss: 8.733\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 27.272727272727273\tLoss: 24.46\n"
      ]
     }
    ],
