--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7582,7 +7582,9 @@
       "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 12.784090909090908\tLoss: 4.187\n",
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 14.559659090909092\tLoss: 10.816\n",
       "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 18.892045454545453\tLoss: 20.097\n",
-      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 22.15909090909091\tLoss: 36.66\n"
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 22.15909090909091\tLoss: 36.66\n",
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 14.133522727272727\tLoss: 77.977\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 12.144886363636363\tLoss: 106.59\n"
      ]
     }
    ],
