Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7584,7 +7584,10 @@
       "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 18.892045454545453\tLoss: 20.097\n",
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 22.15909090909091\tLoss: 36.66\n",
       "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 14.133522727272727\tLoss: 77.977\n",
-      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 12.144886363636363\tLoss: 106.59\n"
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 12.144886363636363\tLoss: 106.59\n",
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 11.008522727272727\tLoss: 104.311\n",
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 10.085227272727273\tLoss: 88.451\n",
+      "Coord: [ 1.  -0.9]\tAcc: 8\tLoss: 90.46\r"
      ]
     }
    ],
