Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7512,7 +7512,11 @@
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 19.105113636363637\tLoss: 3.221\n",
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 38.56534090909091\tLoss: 3.817\n",
       "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 38.13920454545455\tLoss: 8.733\n",
-      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 27.272727272727273\tLoss: 24.46\n"
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 27.272727272727273\tLoss: 24.46\n",
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 15.980113636363637\tLoss: 66.188\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 11.292613636363637\tLoss: 278.142\n",
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 10.653409090909092\tLoss: 2061.56\n",
+      "Coord: [ 1.  -0.8]\tAcc: 9\tLoss: 18668.0996\r"
      ]
     }
    ],
