Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7609,7 +7609,15 @@
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 17.258522727272727\tLoss: 3.759\n",
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 23.579545454545453\tLoss: 4.601\n",
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 28.90625\tLoss: 8.858\n",
-      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 29.048295454545453\tLoss: 13.228\n"
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 29.048295454545453\tLoss: 13.228\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 28.90625\tLoss: 19.274\n",
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 19.744318181818183\tLoss: 51.26\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 12.357954545454545\tLoss: 467.056\n",
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 8.59375\tLoss: 6252.55\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 10.298295454545455\tLoss: 95560.389\n",
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 12.073863636363637\tLoss: 4.062\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 14.559659090909092\tLoss: 3.183\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 24.50284090909091\tLoss: 2.964\n"
      ]
     }
    ],
