Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7587,7 +7587,8 @@
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 12.144886363636363\tLoss: 106.59\n",
       "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 11.008522727272727\tLoss: 104.311\n",
       "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 10.085227272727273\tLoss: 88.451\n",
-      "Coord: [ 1.  -0.9]\tAcc: 8\tLoss: 90.46\r"
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.15625\tLoss: 2.318\n",
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 11.079545454545455\tLoss: 2.385\n"
      ]
     }
    ],
