--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7516,7 +7516,11 @@
       "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 15.980113636363637\tLoss: 66.188\n",
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 11.292613636363637\tLoss: 278.142\n",
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 10.653409090909092\tLoss: 2061.56\n",
-      "Coord: [ 1.  -0.8]\tAcc: 9\tLoss: 18668.0996\r"
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 10.298295454545455\tLoss: 19563.494\n",
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 9.801136363636363\tLoss: 10.499\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 10.9375\tLoss: 3.843\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 12.002840909090908\tLoss: 3.371\n",
+      "Coord: [-0.4 -0.7]\tAcc: 21\tLoss: 2.977\r"
      ]
     }
    ],
