--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7588,7 +7588,9 @@
       "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 11.008522727272727\tLoss: 104.311\n",
       "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 10.085227272727273\tLoss: 88.451\n",
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.15625\tLoss: 2.318\n",
-      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 11.079545454545455\tLoss: 2.385\n"
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 11.079545454545455\tLoss: 2.385\n",
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 12.784090909090908\tLoss: 2.776\n",
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 16.548295454545453\tLoss: 5.253\n"
      ]
     }
    ],
