--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7520,7 +7520,8 @@
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 9.801136363636363\tLoss: 10.499\n",
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 10.9375\tLoss: 3.843\n",
       "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 12.002840909090908\tLoss: 3.371\n",
-      "Coord: [-0.4 -0.7]\tAcc: 21\tLoss: 2.977\r"
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 36.93181818181818\tLoss: 2.423\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 49.71590909090909\tLoss: 3.683\n"
      ]
     }
    ],
