--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7617,7 +7617,12 @@
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 10.298295454545455\tLoss: 95560.389\n",
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 12.073863636363637\tLoss: 4.062\n",
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 14.559659090909092\tLoss: 3.183\n",
-      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 24.50284090909091\tLoss: 2.964\n"
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 24.50284090909091\tLoss: 2.964\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 32.03125\tLoss: 4.163\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 37.5\tLoss: 7.074\n",
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 38.70738636363637\tLoss: 9.853\n",
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 31.960227272727273\tLoss: 18.598\n",
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 18.323863636363637\tLoss: 115.86\n"
      ]
     }
    ],
