--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7590,7 +7590,9 @@
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.15625\tLoss: 2.318\n",
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 11.079545454545455\tLoss: 2.385\n",
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 12.784090909090908\tLoss: 2.776\n",
-      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 16.548295454545453\tLoss: 5.253\n"
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 16.548295454545453\tLoss: 5.253\n",
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 20.525568181818183\tLoss: 11.318\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 29.6875\tLoss: 18.033\n"
      ]
     }
    ],
