Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7521,7 +7521,10 @@
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 10.9375\tLoss: 3.843\n",
       "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 12.002840909090908\tLoss: 3.371\n",
       "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 36.93181818181818\tLoss: 2.423\n",
-      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 49.71590909090909\tLoss: 3.683\n"
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 49.71590909090909\tLoss: 3.683\n",
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 42.32954545454545\tLoss: 9.743\n",
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 27.698863636363637\tLoss: 30.02\n",
+      "Coord: [ 0.4 -0.7]\tAcc: 19\tLoss: 51.816\r"
      ]
     }
    ],
