Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7622,7 +7622,10 @@
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 37.5\tLoss: 7.074\n",
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 38.70738636363637\tLoss: 9.853\n",
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 31.960227272727273\tLoss: 18.598\n",
-      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 18.323863636363637\tLoss: 115.86\n"
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 18.323863636363637\tLoss: 115.86\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 10.227272727272727\tLoss: 1494.868\n",
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.724431818181818\tLoss: 25456.361\n",
+      "Coord: [-1.  -0.6]\tAcc: 13\tLoss: 4.5367.172\r"
      ]
     }
    ],
