--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7592,7 +7592,10 @@
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 12.784090909090908\tLoss: 2.776\n",
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 16.548295454545453\tLoss: 5.253\n",
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 20.525568181818183\tLoss: 11.318\n",
-      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 29.6875\tLoss: 18.033\n"
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 29.6875\tLoss: 18.033\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 21.235795454545453\tLoss: 42.223\n",
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 13.920454545454545\tLoss: 81.037\n",
+      "Coord: [ 0.5 -0.8]\tAcc: 20\tLoss: 89.659\r"
      ]
     }
    ],
