--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7524,7 +7524,11 @@
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 49.71590909090909\tLoss: 3.683\n",
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 42.32954545454545\tLoss: 9.743\n",
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 27.698863636363637\tLoss: 30.02\n",
-      "Coord: [ 0.4 -0.7]\tAcc: 19\tLoss: 51.816\r"
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 13.565340909090908\tLoss: 108.517\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 11.931818181818182\tLoss: 750.057\n",
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.085227272727273\tLoss: 6659.56\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 9.375\tLoss: 9.294\n",
+      "Coord: [-0.9 -0.6]\tAcc: 8\tLoss: 7.6552\r"
      ]
     }
    ],
