--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7595,7 +7595,9 @@
       "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 29.6875\tLoss: 18.033\n",
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 21.235795454545453\tLoss: 42.223\n",
       "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 13.920454545454545\tLoss: 81.037\n",
-      "Coord: [ 0.5 -0.8]\tAcc: 20\tLoss: 89.659\r"
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 11.150568181818182\tLoss: 96.51\n",
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 11.008522727272727\tLoss: 84.988\n",
+      "Coord: [ 0.9 -0.8]\tAcc: 12\tLoss: 72.769\r"
      ]
     }
    ],
