Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7597,7 +7597,9 @@
       "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 13.920454545454545\tLoss: 81.037\n",
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 11.150568181818182\tLoss: 96.51\n",
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 11.008522727272727\tLoss: 84.988\n",
-      "Coord: [ 0.9 -0.8]\tAcc: 12\tLoss: 72.769\r"
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 10.085227272727273\tLoss: 69.747\n",
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 10.724431818181818\tLoss: 2.316\n",
+      "Coord: [-0.8 -0.7]\tAcc: 16\tLoss: 2.329\r"
      ]
     }
    ],
