Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7528,7 +7528,11 @@
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 11.931818181818182\tLoss: 750.057\n",
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.085227272727273\tLoss: 6659.56\n",
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 9.375\tLoss: 9.294\n",
-      "Coord: [-0.9 -0.6]\tAcc: 8\tLoss: 7.6552\r"
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 9.659090909090908\tLoss: 4.25\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 10.9375\tLoss: 3.534\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 18.821022727272727\tLoss: 2.672\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 56.39204545454545\tLoss: 1.845\n",
+      "Coord: [-0.1 -0.6]\tAcc: 72\tLoss: 2.589\r"
      ]
     }
    ],
