Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7599,7 +7599,9 @@
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 11.008522727272727\tLoss: 84.988\n",
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 10.085227272727273\tLoss: 69.747\n",
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 10.724431818181818\tLoss: 2.316\n",
-      "Coord: [-0.8 -0.7]\tAcc: 16\tLoss: 2.329\r"
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 12.784090909090908\tLoss: 2.403\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 16.12215909090909\tLoss: 3.018\n",
+      "Coord: [-0.4 -0.7]\tAcc: 26\tLoss: 3.958\r"
      ]
     }
    ],
