--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7625,7 +7625,15 @@
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 18.323863636363637\tLoss: 115.86\n",
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 10.227272727272727\tLoss: 1494.868\n",
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.724431818181818\tLoss: 25456.361\n",
-      "Coord: [-1.  -0.6]\tAcc: 13\tLoss: 4.5367.172\r"
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 11.292613636363637\tLoss: 4.233\n",
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 13.849431818181818\tLoss: 3.041\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 19.673295454545453\tLoss: 2.69\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 34.16193181818182\tLoss: 2.441\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 45.73863636363637\tLoss: 3.673\n",
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 52.34375\tLoss: 4.683\n",
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 47.15909090909091\tLoss: 7.981\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 32.10227272727273\tLoss: 29.769\n",
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 13.352272727272727\tLoss: 377.795\n"
      ]
     }
    ],
