Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7532,7 +7532,11 @@
       "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 10.9375\tLoss: 3.534\n",
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 18.821022727272727\tLoss: 2.672\n",
       "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 56.39204545454545\tLoss: 1.845\n",
-      "Coord: [-0.1 -0.6]\tAcc: 72\tLoss: 2.589\r"
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 58.23863636363637\tLoss: 3.591\n",
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 42.89772727272727\tLoss: 11.888\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 23.579545454545453\tLoss: 43.582\n",
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 13.28125\tLoss: 261.158\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 10.724431818181818\tLoss: 2350.622\n"
      ]
     }
    ],
