--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7601,7 +7601,9 @@
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 10.724431818181818\tLoss: 2.316\n",
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 12.784090909090908\tLoss: 2.403\n",
       "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 16.12215909090909\tLoss: 3.018\n",
-      "Coord: [-0.4 -0.7]\tAcc: 26\tLoss: 3.958\r"
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 24.005681818181817\tLoss: 5.897\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 35.58238636363637\tLoss: 9.448\n",
+      "Coord: [ 0.1 -0.7]\tAcc: 40\tLoss: 19.075\r"
      ]
     }
    ],
