--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7603,7 +7603,9 @@
       "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 16.12215909090909\tLoss: 3.018\n",
       "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 24.005681818181817\tLoss: 5.897\n",
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 35.58238636363637\tLoss: 9.448\n",
-      "Coord: [ 0.1 -0.7]\tAcc: 40\tLoss: 19.075\r"
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 35.51136363636363\tLoss: 17.77\n",
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 19.105113636363637\tLoss: 48.167\n",
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 13.494318181818182\tLoss: 79.789\n"
      ]
     }
    ],
