Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7536,7 +7536,11 @@
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 42.89772727272727\tLoss: 11.888\n",
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 23.579545454545453\tLoss: 43.582\n",
       "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 13.28125\tLoss: 261.158\n",
-      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 10.724431818181818\tLoss: 2350.622\n"
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 10.724431818181818\tLoss: 2350.622\n",
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.15625\tLoss: 21571.309\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 10.085227272727273\tLoss: 4.548\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 10.582386363636363\tLoss: 3.598\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 11.860795454545455\tLoss: 3.169\n"
      ]
     }
    ],
