Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7633,7 +7633,15 @@
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 52.34375\tLoss: 4.683\n",
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 47.15909090909091\tLoss: 7.981\n",
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 32.10227272727273\tLoss: 29.769\n",
-      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 13.352272727272727\tLoss: 377.795\n"
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 13.352272727272727\tLoss: 377.795\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 8.948863636363637\tLoss: 5926.41\n",
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.085227272727273\tLoss: 105152.119\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 11.789772727272727\tLoss: 2.893\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 15.127840909090908\tLoss: 2.503\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 26.84659090909091\tLoss: 2.28\n",
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 48.29545454545455\tLoss: 2.044\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 62.42897727272727\tLoss: 2.487\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 65.05681818181819\tLoss: 3.061\n"
      ]
     }
    ],
