Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7605,7 +7605,9 @@
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 35.58238636363637\tLoss: 9.448\n",
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 35.51136363636363\tLoss: 17.77\n",
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 19.105113636363637\tLoss: 48.167\n",
-      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 13.494318181818182\tLoss: 79.789\n"
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 13.494318181818182\tLoss: 79.789\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 10.511363636363637\tLoss: 82.009\n",
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.724431818181818\tLoss: 69.264\n"
      ]
     }
    ],
